# VHDL-remote

./: .gitignore  .pj2(new).zip.icloud  .pj2.rar.icloud  README.md  project.rar
MusicController/: CMakeLists.txt  Makefile  README.md  main.cpp
MusicController(c++, deprecated)/: CMakeLists.txt  main.cpp
MusicController(c++, deprecated)/include/: Command.hpp  Controller.hpp  Format.hpp  Strs.hpp
MusicController(c++, deprecated)/source/: Command.cpp  Controller.cpp  MusicList.cpp
MusicController/controller/: Controller.cpp  MusicList.cpp
MusicController/include/: Command.h  Controller.h  Format.h  Interface.h  MusicList.h  MusicList.hpp  Strs.h  dirent.h
MusicController/source/: Command.cpp  Controller.cpp  Interface.cpp  MusicList.cpp
WindowsProject1/: WindowsProject1.sln
WindowsProject1/WindowsProject1/: WindowsProject1.vcxproj
musicController(py)/: Controller.py  MusicList.py  color.py  main.py  timer.py
musicController(py)/pics/: Thumbs.db
project/: Resource.h  project.cpp  project.rc  project.vcxproj  project.vcxproj.filters
project/Debug/: project.exe.recipe  project.ilk  project.res  vc142.idb
project/Debug/project.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  project.lastbuildstate  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
